fix: support almost datatype, supporting slice struct
